--- a/index.html
+++ b/index.html
@@ -37,8 +37,15 @@
     </main>
 
     <!-- footer -->
-    <footer>
-      
+    <footer class="footer">
+      <div class="footer-left">
+        <p>My-port-folio</p>
+        <p>Copyright 2023 ©︎ラットラン合同会社</p>
+      </div>
+      <div class="footer-right">
+        <p>メールアドレス : <a href="info@example.com">info@example.com</a></p>
+        <a href="#">Topへ戻る</a>
+      </div>
     </footer>
   </body>
 </html>
