feat: メインイメージの作成

--- a/index.html
+++ b/index.html
@@ -26,12 +26,51 @@
     </header>
 
     <!-- main -->
-    <main>
+    <main class="main">
       <!-- image -->
-
-      <!-- introduction -->
+      <div main-image class="main-image content">
+        <img class="main-img" src="./img/top-img-2.5303502.png" alt="" />
+        <p>Action is the foundational key to all success.</p>
+      </div>
 
       <!-- about-me -->
+      <div class="about-me">
+        <div class="about-me-left">
+          <img src="./img/top-img.e217d11.png" alt="" />
+        </div>
+        <div class="about-me-right">
+          <h2>自己紹介</h2>
+          <table class="profile">
+            <tr>
+              <th>名前</th>
+              <td>ラットラン太郎</td>
+            </tr>
+            <tr>
+              <th>生年月日</th>
+              <td>2000/12/25</td>
+            </tr>
+            <tr>
+              <th>所属</th>
+              <td>〇〇大学 四年生</td>
+            </tr>
+            <tr>
+              <th>スキルセット</th>
+              <td>HTML、CSS、SCSS、Javascript、Vue.js、GitHub</td>
+            </tr>
+            <tr>
+              <th>役割</th>
+              <td>フロントエンジニア</td>
+            </tr>
+            <tr>
+              <th>趣味</th>
+              <td>サッカー鑑賞</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+
+      <!-- introduction -->
+      <introduction class="main-introduction content"> </introduction>
 
       <!-- career -->
     </main>
