レスポンシブの作成

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <footer class="footer">
       <div class="footer-left">
         <p>My-port-folio</p>
-        <p>Copyright 2023 ©︎ラットラン合同会社</p>
+        <p class="copyright">Copyright 2023 ©︎ラットラン合同会社</p>
       </div>
       <div class="footer-right">
         <p>メールアドレス : <a href="info@example.com">info@example.com</a></p>
